syntax = "proto3";

package pagedownload;

message DownloadRequest {
  string url = 1;
}

message DownloadResponse {
  string original_url = 1;
  bytes zip_archive = 2;
}

service PageDownloader {
  rpc DownloadPage (DownloadRequest) returns (DownloadResponse);
}